# mill-game

./: .gitignore  Makefile  README.md  check_mills.py  exceptions.py  game.py  game_board.py  interface.py  main.py  pawn_position_mapper.py  player.py  pyproject.toml  test_check_if_pawn_in_mill.py  test_game_board.py  test_get_all_empty_pawn_positions.py  test_get_possible_moves_for_pawn.py  validation.py
.github/workflows/: lint-and-test.yml
game_boards/: game_board.py  game_board_check_mills.py  game_board_validation.py  nine_pawn_board.py  six_pawn_board.py  three_pawn_board.py  twelve_pawn_board.py
mill_game/: check_mills.py  exceptions.py  game.py  game_board.py  interface.py  main.py  pawn_position_mapper.py  player.py  validation.py
mill_game/game_boards/: nine_pawn_board.py  six_pawn_board.py  three_pawn_board.py  twelve_pawn_board.py
tests/: test_check_if_pawn_in_mill.py  test_get_all_empty_pawn_positions.py  test_get_possible_moves_for_pawn.py
